--- a/portal-impl/src/system.properties
+++ b/portal-impl/src/system.properties
@@ -41,8 +41,9 @@
     # Set the default locale used by Liferay. This locale is no longer set at
     # the VM level. See LEP-2584.
     #
-    user.country=US
-    user.language=en
+    #BEHCHANGED
+    user.country=IR
+    user.language=fa
 
     #
     # Set the default time zone used by Liferay. This time zone is no longer set
