--- a/sampleConfiguration/portal-ext.properties
+++ b/sampleConfiguration/portal-ext.properties
@@ -7,7 +7,7 @@
 
     database.indexes.update.on.startup=true
 
-    company.default.name=\u0628\u0647\u067E\u0631\u062F\u0627\u0632 \u062C\u0647\u0627\u06CC\u0646
+    company.default.name=\u0628\u0647\u067E\u0631\u062F\u0627\u0632 \u062C\u0647\u0627\u0646
     company.default.web.id=behpardaz.net
     company.default.home.url=/
     company.default.locale=fa_IR
