remove removed portlet from default layout set

--- a/sampleConfiguration/portal-ext.properties
+++ b/sampleConfiguration/portal-ext.properties
@@ -38,3 +38,4 @@
     
     announcements.email.from.name=Behpardaz Jahan Co.    
     announcements.email.from.address=noreply@behpardaz.net
+    default.guest.public.layout.column-2=
